--- a/src/components/list-page/list-page.module.css
+++ b/src/components/list-page/list-page.module.css
@@ -22,7 +22,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 70px;
+  margin-top: 35px;
   height: 250px;
 }
 
@@ -51,6 +51,6 @@
 
 .bottomSmallCircle {
   position: absolute;
-  bottom: 0;
+  bottom: -30px;
   margin-left: 11px;
 }
